# PmxConverter

./: .gitignore  CMakeLists.txt  ModelReader.cpp  PmxConverter.cpp  PmxConverter.h  README.md
include/assimp/: material.h
